# compilation

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  my_notes.md  pyproject.toml
compilation_configs/: 2024_tri_swim.yaml  2025_tri_swim.yaml
media/: video_urls.txt  yt_com.txt  yt_desc.txt  yt_teaser.txt
src/compilation/: __init__.py
src/compilation/scripts/: compute_stroke_rate.py  create_timestamps_file.py  export_frames.py  main.py
src/compilation/utilities/: utils.py  utils_config.py  utils_ffmpeg.py  utils_io.py  utils_log.py  utils_overlay_text.py  utils_path.py  utils_youtube.py
tests/: test_dummy.py
