[project]
name = "compilation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "simon chauvin", email = "simon.chauvin@accenture.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
compilation = "compilation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
